--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
     @keyframes blink-green { 0%, 90% { opacity: 1; } 95%, 100% { opacity: 0.2; } }
 
     .song-info {
-      /* ✅ Aún más alto: +12px total */
       min-height: 72px;
       max-height: 96px;
       height: auto;
@@ -462,7 +461,7 @@
       <button id="toggleBtn" class="one-btn">▷ PLAY SYSTEM</button>
 
       <div class="volume">
-        <div class="volume-icon mute" id="muteBtn">volume_mute</div>
+        <div class="volume-icon" id="muteBtn">volume_mute</div>
         <input type="range" class="slider" id="volSlider" min="0" max="1" step="0.01" value="1.0">
         <div class="volume-icon" id="maxVolBtn">volume_up</div>
       </div>
@@ -501,6 +500,16 @@
         bars.push(bar);
       }
 
+      // ✅ NUEVA FUNCIÓN: solo cambia el color del ícono (no el texto)
+      function updateMuteIconColor() {
+        const vol = parseFloat(volSlider.value);
+        if (vol === 0) {
+          muteBtn.classList.add('mute');
+        } else {
+          muteBtn.classList.remove('mute');
+        }
+      }
+
       function destroyAudio() {
         if (audio) {
           audio.pause();
@@ -513,6 +522,7 @@
           analyser = null;
         }
         if (audioContext) {
+          audioContext.close();
           audioContext = null;
         }
         isPlaying = false;
@@ -627,19 +637,27 @@
         }
       };
 
+      // ✅ EVENTOS ACTUALIZADOS — solo cambian el color, no el ícono
       volSlider.oninput = () => {
-        if (audio) audio.volume = parseFloat(volSlider.value);
+        const vol = parseFloat(volSlider.value);
+        if (audio) audio.volume = vol;
+        updateMuteIconColor();
       };
 
       muteBtn.onclick = () => {
         volSlider.value = 0;
         if (audio) audio.volume = 0;
+        updateMuteIconColor();
       };
 
       maxVolBtn.onclick = () => {
         volSlider.value = 1.0;
         if (audio) audio.volume = 1.0;
+        updateMuteIconColor();
       };
+
+      // ✅ Inicializar color al cargar
+      updateMuteIconColor();
 
       function syncGlitch() {
         const text = sonicTitle.textContent.trim() || '— AWAITING SIGNAL —';
